--- a/air.html
+++ b/air.html
@@ -47,7 +47,7 @@
 		<div class="row">
 			<div class="col-md-6">
 				<h1><img class="img" src="img/biotherm-tech.png" style="width:80px;"/> Optimized <b>Air</b></h1>
-				<h4>Biotherm creates innovative technology solutions for commerical plant growers.</h4>
+				<h4><b>Biotherm creates innovative air technologies for plant growers. We have partnered with ChillKing to bring growers a new and more efficient way to condition their grow environments.</b></h4>
 			</div>
 		</div>
 		<!--<div class="row header-image-credit">
@@ -68,40 +68,24 @@
 	<div class="container section">
 		<div class="row">
 			<div class="col-md-6">
-				<h3>Do You Know Your Grow?</h3>
-				<p>The KnowYourGrow platform will open up an entirely new view into the health of your plants. You are likely already
-measuring pH and EC in your water, but what about Dissolved Oxygen? Do you know how water temperature affects those readings? How about water content in your rootzone? These and other questions are answered by KnowYourGrow. Both real-time and historical readings are available via a local web interface on
-any device. It is all about the data. Your plants are trying to tell you something...it is time to start listening!</p>
+				<h3><b>Conditioning</b></h3>
+				<h5>BioTherm has teamed up with ChillKing to bring you a variety of greenhouse cooling solutions. We offer a wide array of chiller sizes and where electricity is at a premium, we offer an optional natural gas engine driven compressor. Chilled water can be distributed with many space saving options including custom air handling units as well as BioTherm fin products.</h5>
+				<h3><b>Dehumidification</b></h3>
+				<h5>BioTherm understands the demands of indoor gardening and greenhouse crops. A major issue is moisture control &amp; humidity management. ChillKing has developed a line of pragmatic dehumidification solutions for agricultural applications without compromising performance: The DehuKing! A saturated atmosphere will result in moisture removal up to 2GPH per KW.</h5>
+				<h5>The units were developed to make sure the equipment was easily servicable, so replacement parts can be purchased at most refridgeration and HVAC supply stores (and other brands can be substituted with our approval if the exact part number cannot be located).
+				<p><a href="hydro-flood.html"><button type="button" class="btn btn-success">Read More</button></a>
 			</div>
 			<div class="col-md-6">
-				<div class="card card-nav-tabs">
-					<div class="card-header card-header-success">
-						<div class="nav-tabs-navigation">
-							<div class="nav-tabs-wrapper">
-								<ul class="nav nav-tabs" data-tabs="tabs">
-									<li class="nav-item"><a class="nav-link active" href="#Hydra" data-toggle="tab">Hydra</a></li>
-									<li class="nav-item"><a class="nav-link" href="#Commander" data-toggle="tab">Commander</a></li>
-									<li class="nav-item"><a class="nav-link" href="#Roots" data-toggle="tab">Roots</a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div class="card-body ">
-						<div class="tab-content text-center">
-							<div class="tab-pane active" id="Hydra">
-								<p> The Mantis&trade; will open up an entirely new view into the health of your plants.  Measure and record Real-time PH, EC, ORP, Dissolved Oxygen and temperature readings All readings are available via a local web interface on any device. </p>
-								<!--<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>-->
-							</div>
-							<div class="tab-pane" id="Commander">
-								<!--<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>-->
-							</div>
-							<div class="tab-pane" id="Roots">
-								<!--<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>-->
-							</div>
-						</div>
-					</div>
-				</div>
+				<h3>CO<sub>2</sub> <b>Enrichment</b></h3>
+				<h5>CO<sub>2</sub> levels are naturally low in a greenhouse environment as plants use available CO<sub>2</sub> as part of the photosynthetic process. Increasing CO<sub>2</sub> levels above ambient conditions promotes increased plant growth and health. With the right condensing boiler system in place, a BioTherm CO<sub>2</sub> System can easily be integrated to achieve elevated CO<sub>2</sub> levels in the greenhouse environment. BioTherm systems pull CO<sub>2</sub> directly from the boilers exhaust gases and distribute them uniformly into the greenhouse environment, while ensureing other harmful gases are kept at a safe level. With a BioTherm CO<sub>2</sub> System, there is no need for large bulk tanks, or individual CO<sub>2</sub> burners. Theese systems can be used in indoor and greenhouse operations. </h5>
+				<p><a href="hydro-toob.html"><button type="button" class="btn btn-success">Read More</button></a></p>
+				<h3><b>Sanitization and Filtration</b></h3>
+				<h5>Each DehuKing unit comes with UV lights to sanitize the air as well as a variety of filtration</h5>
 			</div>
+		</div>
+		<div class="row">
+
+			
 		</div>
 	</div>
 	
@@ -110,12 +94,12 @@ any device. It is all about the data. Your plants are trying to tell you somethi
 		<div class="col-md-4">
 			<div class="card card-profile card-plain">
 				<div class="card-header card-header-image">
-					<a href="img/tech_hydra_lt.jpg" data-toggle="lightbox" class="thumbnail" title=""><img class="img" src="img/tech_hydra_lt.jpg" /></a>
+					<a href="img/air_conditioning.jpg" data-toggle="lightbox" class="thumbnail" title=""><img class="img" src="img/air_conditioning.jpg" /></a>
 				</div>
 				<div class="card-body ">
-					<h4 class="card-title">Hydra</h4>
+					<h4 class="card-title">DehuKing</h4>
 					<h6 class="card-category text-muted">This is not your average meter.</h6>
-					<p class="card-description">The HYDRA reads pH, EC, ORP, DO, Temp and optionally FLOW. The combination of these readings gives the grower a deeper insight into their plants water source. Both real- time and historical readings are available through the local network web interface. Email and text notifications inform the grower when something is not quite right. The HYDRA also has the same DO control abilities as the DO COMMANDER unit. In addition, it can interface with our DOSE units to control pH and EC in your reservoir or tank. Two of the DOSE units can be used with each HYDRA for a total of 8 unique stock solutions.</p>
+					<p class="card-description"></p>
 				</div>
 				<div class="card-footer justify-content-center">
 				</div>
@@ -124,39 +108,50 @@ any device. It is all about the data. Your plants are trying to tell you somethi
 		<div class="col-md-4">
 			<div class="card card-profile card-plain">
 				<div class="card-header card-header-image">
-					<a href="img/tech_do_commander.jpg" data-toggle="lightbox" class="thumbnail" title=""><img class="img" src="img/tech_do_commander.jpg" /></a>
+					<a href="img/air_enrichment.jpg" data-toggle="lightbox" class="thumbnail" title=""><img class="img" src="img/air_enrichment.jpg" /></a>
 				</div>
 				<div class="card-body ">
-					<h4 class="card-title">DO Commander</h4>
+					<h4 class="card-title">ChillKing</h4>
 					<h6 class="card-category text-muted"></h6>
-					<p class="card-description">The DO COMMANDER reads dissolved oxygen and temperature in your irrigation line or tank.  The touch screen allows for easy calibration and reading of values.  In addition, the DO COMMANDER is able to maintain your tank DO levels to within ± .1 mg/L when used with the TrueLeaf O2TOOB. Just like the HYDRA, both real-time and historical readings are available through the local network web interface. </p>
+					<p class="card-description"> </p>
 				</div>
 				<div class="card-footer justify-content-center">
 				</div>
 			</div>
 		</div>
 		<div class="col-md-4">
-			<div class="card card-profile card-plain">
-				<div class="card-header card-header-image">
-					<a href="img/tech_roots_io.jpg" data-toggle="lightbox" class="thumbnail" title=""><img class="img" src="img/tech_roots_io.jpg" /></a>
+
+			<div class="card card-nav-tabs">
+				<div class="card-header card-header-success">
+					<div class="nav-tabs-navigation">
+						<div class="nav-tabs-wrapper">
+							<ul class="nav nav-tabs" data-tabs="tabs">
+								<li class="nav-item"><a class="nav-link active" href="#Hydra" data-toggle="tab">Hydra</a></li>
+								<li class="nav-item"><a class="nav-link" href="#Commander" data-toggle="tab">Commander</a></li>
+								<li class="nav-item"><a class="nav-link" href="#Roots" data-toggle="tab">Roots</a></li>
+							</ul>
+						</div>
+					</div>
 				</div>
 				<div class="card-body ">
-					<h4 class="card-title">Roots</h4>
-					<h6 class="card-category text-muted"></h6>
-					<p class="card-description">The ROOTS module is a battery powered and solar charged water content, EC and temperature transmitter designed to give the grower
-information they need to accurately irrigate their plants. Each unit will support up to 3 of the WC/EC/Temp probes. The probes are stainless steel and will read in soil or soilless environments. The ROOTS transmit rootzone data to the CORE (required) for collection and visualization. Typical application is at least one per irrigation zone or strain.</p>
-				</div>
-				<div class="card-footer justify-content-center">
+					<div class="tab-content text-center">
+						<div class="tab-pane active" id="Hydra">
+							<p></p>
+							<!--<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>-->
+						</div>
+						<div class="tab-pane" id="Commander">
+							<!--<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>-->
+						</div>
+						<div class="tab-pane" id="Roots">
+							<!--<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>-->
+						</div>
+					</div>
 				</div>
 			</div>
+
 		</div>
 	</div>
 
-
-
-	<div class="section">
-		<img class="img-fluid" src="img/KYG_Dashboard.jpg">
-	</div>
 </div>
 </div>
 
