--- a/case-air-sunnyside.html
+++ b/case-air-sunnyside.html
@@ -42,7 +42,7 @@
 	</div>
 </nav>
 
-<div class="page-header header-smallest header-filter" data-parallax="true">
+<div class="page-header header-smallest header-filter" data-parallax="true" style="background:#16c462;">
 	<div class="container">
 
 	</div>
@@ -51,25 +51,37 @@
 
 <div class="main main-raised">
 
-<div class="container">
+<div class="container section">
 	
-	<div class="row section">
+	<div class="row">
 		<div class="col-md-12">
+			<span class="d-block p-4 bg-dark text-white">
+				<img src="img/front-tech-white-full.png" class="float-right" width=120px style="opacity: 0.1;"/> 
+				<h3><b>Case Study: Nancy Duvall</b> <br />Sunnyside Farms, CA <br /><b>Increased Yield and Faster Growth</b></h3>
+			</span>
+			<span class="d-block p-2 bg-success text-white"></span>
 			<figure class="figure d-block">
-			  <img src="img/case_sunnyside.jpg" style="float:right;max-width:800px" class="figure-img img-fluid rounded" alt="">
+			  <img src="img/case_sunnyside.jpg" class="figure-img img-fluid rounded" alt="">
 			</figure>
-			<h3><b>Case Study: Nancy Duvall</b> <br />Sunnyside Farms, CA <br />Increased Yield and Faster Growth<br /><br /></h3>
-			<p><span class="d-inline p-2 bg-success text-white"><b>The Challange</b></span></p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-4">
+			<p><span class="d-block p-2 bg-success text-white"><b>The Challange</b></span></p>
 			<p>Nancy knew that greenhouses are prone to suffer from reduced levels of CO2 and that increasing the CO2 concentration above ambient could help boost her crop yield. However, her experiences with CO2 burners had always been disappointing and she wasn’t interested in a liquid CO2 system. One option that had always intrigued her was to use exhaust gas from a boiler system, but she had assumed the technology was either unsafe or simply too expensive to implement. BioTherm had already success- fully provided rootzone heating and oxygen infusion technologies to help her grow bigger, healthier crops in less time. Since those investments had paid for themselves very quickly, she wanted to understand how a CO2 system would benefit her and requested a proposal for a centralized CO2 Enrichment system which could increase her yield even more.</p>
-			<p><br /><span class="d-inline p-2 bg-success text-white"><b>The BioTherm Solution</b></span></p>
+		</div>
+		<div class="col-md-4">
+			<p><span class="d-block p-2 bg-success text-white"><b>The BioTherm Solution</b></span></p>
 			<p>BioTherm CO2 Enrichment systems provide elevated and uniform CO2 levels using the same equipment that heats the greenhouse. A condensing boiler is the heart of the system, and as it burns fuel, it produces combustion gases rich in CO2. Through the use of a blower and control assembly, this flue gas is routed into the greenhouse zones evenly and without a lot of complicated equipment. CO2 is introduced at truss level, and as CO2 is heavier than air, gently drops onto the plant canopy, bathing Nancy’s crops in Carbon Dioxide. Within weeks, she saw the difference. More leaves and flowers, faster growth, and higher yield. Within a few harvests, the investment bore fruit.</p>
-			<p><br /><span class="d-inline p-2 bg-success text-white"><b>How It Works</b></span></p>
+		</div>
+		<div class="col-md-4">
+			<p><span class="d-block p-2 bg-success text-white"><b>How It Works</b></span></p>
 			<p>“With a completely heated floor surface, we were able to shorten our grow time by 4-5 weeks, increase production, and grow a more consistent and healthy crop,” Patrick said.</p>
 			<p>Also, while maintaining a gentle and con- sistent heat for his hanging basket crop, the DuoFin Top Heat System did double duty as a snow melt system for his greenhouses.</p>
 			<p>With the added benefit of high-efficiency boilers, Patrick was able to save money on fuel, adding to his bottom line. Because of the increase in energy savings, Michael’s even qualified for a grant which helped pay for the boilers!</p>
 		</div>
-
 	</div>
+
 
 	<div class="section">
 	</div>
@@ -118,9 +130,7 @@
 		</div>
 	</div>
 </div>
-	<div class="copyright text-center">
-		<p>&#xA9;<script>document.write(new Date().getFullYear())</script> BioTherm, Inc.</p>
-	</div>
+
 </div>
 </footer>
 <!--     *********   END FOOTER     *********      -->
