--- a/case-hydro-fessler.html
+++ b/case-hydro-fessler.html
@@ -42,7 +42,7 @@
 	</div>
 </nav>
 
-<div class="page-header header-smallest header-filter" data-parallax="true">
+<div class="page-header header-smallest header-filter" data-parallax="true" style="background:#1c8bed;">
 	<div class="container">
 
 	</div>
@@ -51,28 +51,34 @@
 
 <div class="main main-raised">
 
-<div class="container">
+<div class="container section">
 	
-	<div class="row section">
+	<div class="row">
 		<div class="col-md-12">
+			<span class="d-block p-4 bg-dark text-white">
+				<img src="img/front-hydro-white-full.png" class="float-right" width=120px style="opacity: 0.1;"/> 
+				<h3><b>Case Study: Marvin Fessler</b> <br />Fessler's Nursery, Woodburn, OR <br /><b>Irrigation Efficiency and Reduced Labor</b></h3>
+			</span>
+			<span class="d-block p-2 bg-hydro text-white"></span>
 			<figure class="figure d-block">
-			  <img src="img/case_fessler.jpg" style="float:right;max-width:400px" class="figure-img img-fluid rounded" alt="">
+			  <img src="img/case_fessler.jpg" class="figure-img img-fluid rounded" alt="">
 			</figure>
-			<h3><b>Case Study: Marvin Fessler</b> <br />Fessler's Nursery, Woodburn, OR <br />Irrigation Efficiency and Reduced Labor<br /><br /></h3>
-			<p><span class="d-inline p-2 bg-hydro text-white"><b>The Challange</b></span></p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-4">
+			<p><span class="d-block p-2 bg-hydro text-white"><b>The Challange</b></span></p>
 			<p>Fesslers Nursery wanted to expand their production space to meet their ever-grow- ing market demand. However, they also needed to provide the highest quality product, with the lowest labor cost, all the while maintaining their earth-friendly business practices.</p>
-			<p><br /><span class="d-inline p-2 bg-hydro text-white"><b>The BioTherm Solution</b></span></p>
+		</div>
+		<div class="col-md-4">
+			<p><span class="d-block p-2 bg-hydro text-white"><b>The BioTherm Solution</b></span></p>
 			<p>BioTherm <a href="hydro-flood.html">Cascade Floors</a> are the most efficient method of sub irrigation. Water is pumped to individual irrigation zones, where a thin skim of water evenly irrigates every plant as it flows from the fill side to the drain side of the zone.</p>
-			<p></p>
-			<p><br /><span class="d-inline p-2 bg-hydro text-white"><b>How It Works</b></span></p>
+		</div>
+		<div class="col-md-4">
+			<p><span class="d-block p-2 bg-hydro text-white"><b>How It Works</b></span></p>
 			<p><a href="hydro-flood.html">Cascade Floors</a> use a unidirectional slope which allows gravity to drain the system. Because the system fills and drains simul- taneously, water is available for same cycle use. These design features allow for a faster irrigation cycle with less energy expended for pumping. Reduced labor and water conservation are additional benefits of a BioTherm Cascade Floor.</p>
 		</div>
-
 	</div>
-
-	<div class="section">
-	</div>
-
 </div>
 
 </div>
@@ -117,9 +123,7 @@
 		</div>
 	</div>
 </div>
-	<div class="copyright text-center">
-		<p>&#xA9;<script>document.write(new Date().getFullYear())</script> BioTherm, Inc.</p>
-	</div>
+
 </div>
 </footer>
 <!--     *********   END FOOTER     *********      -->
