--- a/hydro.html
+++ b/hydro.html
@@ -48,10 +48,10 @@
 			<div class="col-md-6">
 				<h1><img src="img/biotherm-hydro.png" style="width:80px;"> <b>Hydro</b> Sciences</h1>
 				<h3>Innovative Irrigation Systems for Greenhouses</h3>
-				<h4>Since 1998, BioTherm has been at the forefront of subirrigation systems.</h4>
+				<h4>BioTherm Hydro Sciences has a simple focus... to enhance your irrigation system and boost plant growth using cutting edge technologies with efficiency in mind. Our products are proven to increase yeilds, improve plant vigor, and increase resistance to diseases and pests.</h4>
 			</div>
 		</div>
-		<div class="row header-image-credit">
+		<!--<div class="row header-image-credit">
 			<div class="col-md-4 offset-md-8 text-right">
 				<p>
 					Flood Floor Irrigation: <b>The Project Name</b><br />
@@ -59,7 +59,7 @@
 					<a href="project.html">( whitepaper <i class="fas fa-external-link-alt"></i>)</a>
 				</p>
 			</div>
-		</div>
+		</div>-->
 	</div>
 </div>
 
@@ -69,24 +69,36 @@
 <div class="main main-raised">
 
 	<div class="container section">
-
-		
 		<div class="row">
 			<div class="col-md-6">
-				<h3>The <b>TOOB</b>&trade;</h3>
-				<h4 class="title">Oxygen Infusion Machine</h4>
-				<h5>A groundbreaking new way to economically boost dissolved oxygen (DO) levels in your irrigation system and enhance plant health and production.</h5>
-				<p><a href="hydro-toob.html"><button type="button" class="btn btn-hydro">Read More</button></a></p>
-			</div>
-			<div class="col-md-6">
 				<h3><b>Flood</b> Floors</h3>
+				<h5>A quick responding irrigation cycle time is critical to greater control of nutrient uptake and prevents oversoaking. Our Flood Floor systems save water, energy, and fertilizer and they reduce labor costs by up to 95%.</h5>
+				<h3><b>Cascade</b> Floors</h3>
 				<h5>Our innovative technology provides a quick responding irrigation cycle time which is critical to greater control of nutirent uptake, timing, and prevents oversoaking. Our Flood Floor and Cascade Floor systems save water, energy, fertilizer and reduce labor costs by up to 95%.</h5>
 				<p><a href="hydro-flood.html"><button type="button" class="btn btn-hydro">Read More</button></a>
 			</div>
+			<div class="col-md-6">
+				<h3><b>TOOB</b> Oxygen Infuser</h3>
+				<h4 class="title">Oxygen Infusion Machine</h4>
+				<h5>BioTherm’s “the Toob” Oxygen Infuser and associated products provide a robust solution for increased dissolved oxygen levels in your irrigation water. Systems start with flow rates as low as 2 GPM and are able to scale as high as required. Our most popular unit supports up to 18 GPM. Our infusion products can be installed in any type of irrigation system and are proven to increase levels of dissolved oxygen providing a broad spectrum of plant health benefits. Installation is simple and well documented, with technical support available before, during, and after installation.</h5>
+				<p><a href="hydro-toob.html"><button type="button" class="btn btn-hydro">Read More</button></a></p>
+			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-12">
-				
+			<div class="col-md-6">
+				<h3><b>Irrigation</b> Pre-Heat &amp; Pre-Cool</h3>
+				<h5>Each plant species prefers to be irrigated with water that is the “right” temperature, just as Mother Nature intended. Irrigating with appropriately tempered water will encourage faster plant growth and produce greater yields. Whether your plants need cold well water warmed up prior to irrigation or warm water that needs to be cooled down, we can help. BioTherm provides stand-alone systems or integrated Pre-Heat and Pre-Cool systems that work in tandem with our traditional heating and cooling designs.</h5>
+				<p><a href="hydro-toob.html"><button type="button" class="btn btn-hydro">Read More</button></a></p>
+			</div>
+			<div class="col-md-6">
+				<h3><b>DO</b> Commander</h3>
+				<h4 class="title">Maintain water system DO levels to within 0.1mg/L.</h4>
+				<h5></h5>
+				<p><a href="hydro-toob.html"><button type="button" class="btn btn-hydro">Read More</button></a></p>
+				<h3><b>0<sub>2</sub>Gen</b> Commander</h3>
+				<h4 class="title">Dissolved Oxygen for Irrigation Water</h4>
+				<h5></h5>
+				<p><a href="hydro-o2gen.html"><button type="button" class="btn btn-hydro">Read More</button></a></p>
 			</div>
 		</div>
 	</div>
